--- a/udemyPyProFilesMaster/App-5-Flatmates-Bill-Web-App/templates/results.html
+++ b/udemyPyProFilesMaster/App-5-Flatmates-Bill-Web-App/templates/results.html
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-    {{name1}} pays {{amount1}} <br>
+    {{name1}} pays {{amount1}} 
+    <br>
     {{name2}} pays {{amount2}}
 </body>
 </html>
+
+
