worked on App 6
Signed-off-by: ktmurphy <katie.m.murphy@outlook.com>

--- a/udemyPyProFilesMaster/App-6-Project-Calorie-Webapp/static/mainEx.css
+++ b/udemyPyProFilesMaster/App-6-Project-Calorie-Webapp/static/mainEx.css
@@ -1,5 +1,5 @@
 h2 {
-    color: darkblue;
+    color: darkgrey;
     text-align: center;
     font-size: 50px;
 }
@@ -10,16 +10,18 @@ input[type=text] {
     margin: 10px 0;
 }
 
-input[type=submit] {
+input[type=submit]{
     width: 100%;
-    padding: 8px 8px;
-    color: aliceblue;
-    background-color: lightsteelblue; 
+    background-color: YellowGreen;
+    color: White;
+    padding: 12px 12px;
     border: none;
-    border-radius: 8px;
+    border-radius: 6px;
+
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: Black;
+    color: White;
     padding: 20px;
 }
