--- a/udemyPyProFilesMaster/App-6-Project-Calorie-Webapp/templates/index.html
+++ b/udemyPyProFilesMaster/App-6-Project-Calorie-Webapp/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h2>Calories calculation</h2>
-<p>This web app is useful to calculate how mnay calories you should take today. </p>
-<a href={{url_for('calories_form_page')}}>Go to the calculation page</a>
-</body>
+<html>
+    <head>
+        <meta charset = 'UTF-8'>
+        <title>Title</title>
+    </head>
+    <body>
+        <h2>Calorie Counter App</h2>
+        <p>This is a useful app for calculating the number of calories you need in a day.</p>
+        <a href="{{url_for('calorie_form_page')}}">Go to Calorie Calculator</a>
+    </body>
 </html>
